[package]
name = "abestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.10.29"
borsh = "0.9.3"
thiserror = "1.0.31"
rabe = "0.3.1"
serde = "1.0.189"
rabe-bn = "0.4.20"
rand = "0.8.5"


[lib]
crate-type = ["cdylib", "lib"]